# Learning

./: readme.md
cpp-opengl-33-sprite-render/: CMakeLists.txt  build.sh
cpp-opengl-33-sprite-render/assets/shaders/: sprite.frag  sprite.vert
cpp-opengl-33-sprite-render/source/: main.cpp
cpp-opengl-33-sprite-render/source/glad/include/glad/: glad.h
cpp-opengl-33-sprite-render/source/glad/src/: glad.c
cpp-opengl-33-sprite-render/source/include/: glad.hpp  renderer.hpp  shader_program_builder.hpp
cpp-opengl-33-sprite-render/source/renderer/: renderer.cpp  renderer_helpers.cpp  renderer_render.cpp  renderer_window.cpp  shader_program_builder.cpp
hoar/: .gitignore  Cargo.toml  Makefile  README.md  i686-kernel.json  x86_64-kernel.json
hoar/.cargo/: config.toml
hoar/src/arch/i686/: boot.asm  gdt.asm  grub.cfg  interrupts.asm  linker-debug.ld  linker-release.ld
hoar/src/kernel/: gdt.rs  idt.rs  kernel.rs  mem.rs  serial.rs  tss.rs  vga.rs
hoar/src/kernel/interrupts/: dispatcher.rs  mod.rs  pic.rs  registry.rs  types.rs
hoar/src/kernel/io/: io.rs
rust-snake/: Cargo.toml  base.rs  main.rs
